--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Pomocny sąsiad</string>
-
+    <string name="google_maps_api_key">AIzaSyD3jjUDU4eJWy-GcumnSV59lnXGywfOXa4</string>
     <string name="choose_role">Wybierz rolę</string>
     <string name="volunteer">Wolontariusz</string>
     <string name="inNeed">Potrzebujący</string>
