--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,8 +22,10 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="offer_to_help">Zaproponuj pomoc</string>
     <string name="accept">Akceptuj</string>
-    <string name="reject">Odmów</string>
+    <string name="accepted">Zaakceptowano</string>
+    <string name="reject">Zrezygnuj</string>
     <string name="finish">Zakończ i oceń</string>
+    <string name="finished">Zakończono</string>
 
 
 </resources>
