--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,8 @@
     <string name="reject">Zrezygnuj</string>
     <string name="finish">Zakończ i oceń</string>
     <string name="finished">Zakończono</string>
+    <string name="send">Wyślij</string>
+    <string name="assess_question">Jak oceniasz współpracę z użytkownikiem </string>
 
 
 </resources>
