--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="shopping_list">Twoja lista zakupów:</string>
     <string name="add_product">Dodaj produkt do listy</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment">Hello</string>
     <string name="offer_to_help">Zaproponuj pomoc</string>
     <string name="accept">Akceptuj</string>
     <string name="accepted">Zaakceptowano</string>
@@ -29,6 +29,7 @@
     <string name="send">Wyślij</string>
     <string name="assess_question">Jak oceniasz współpracę z użytkownikiem </string>
     <string name="check_account">Sprawdź profil</string>
+    <string name="chatHint">Wpisz wiadomość</string>
 
 
 </resources>
